fix: fix alignment of border for slider

--- a/src/App.css
+++ b/src/App.css
@@ -72,8 +72,14 @@
 .solid {
   border: 2px solid black;
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .none {
   border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
